segment data changes to copy number
SVN-Revision: 3614